--- a/riffshareiii/parts/exe/theme/plugin.css
+++ b/riffshareiii/parts/exe/theme/plugin.css
@@ -13,7 +13,7 @@
 	flex-direction: column;
 	visibility: hidden;
 	border-radius2: 0.25cm;
-	background-color: #888888ee;
+	background-color2: #888888ee;
 }
 #pluginSamplerDiv {
 	position: absolute;
@@ -30,7 +30,7 @@
 	flex-direction: column;
 	visibility: hidden;
 	border-radius2: 0.25cm;
-	background-color: #888888ee;
+	background-color2: #888888ee;
 }
 #pluginSequencerDiv {
 	position: absolute;
@@ -47,7 +47,7 @@
 	flex-direction: column;
 	visibility: hidden;
 	border-radius2: 0.25cm;
-	background-color: #888888ee;
+	background-color2: #888888ee;
 }
 #pluginActionDiv {
 	position: absolute;
@@ -64,7 +64,7 @@
 	flex-direction: column;
 	visibility: hidden;
 	border-radius2: 0.25cm;
-	background-color: #888888ee;
+	background-color2: #888888ee;
 }
 
 #pluginPointDiv {
@@ -82,7 +82,7 @@
 	flex-direction: column;
 	visibility: hidden;
 	border-radius2: 0.25cm;
-	background-color: #888888ee;
+	background-color2: #888888ee;
 }
 
 .pluginFrame {
@@ -104,7 +104,7 @@
 #pluginActionHeader {
 	width: 100%;
 	height: 1.0cm;
-	background-color: var(--background-color10);
+	background-color: var(--background-color);
 	border-radius2: 0.125cm 0.125cm 0.0cm 0.0cm;
 	flex-basis: auto;
 	flex-shrink: 0;
@@ -117,7 +117,7 @@
 #pluginPointHeader {
 	width: 100%;
 	height: 1.0cm;
-	background-color: var(--background-color10);
+	background-color: var(--background-color);
 	border-radius2: 0.125cm 0.125cm 0.0cm 0.0cm;
 	flex-basis: auto;
 	flex-shrink: 0;
@@ -130,7 +130,7 @@
 .pluginOtherHeader {
 	width: 100%;
 	height: 1.0cm;
-	background-color: var(--background-color10);
+	background-color: var(--background-color);
 	border-radius2: 0.125cm 0.125cm 0.0cm 0.0cm;
 	flex-basis: auto;
 	flex-shrink: 0;
