--- a/riffshareiii/parts/exe/theme/plugin.css
+++ b/riffshareiii/parts/exe/theme/plugin.css
@@ -104,7 +104,7 @@
 #pluginActionHeader {
 	width: 100%;
 	height: 1.0cm;
-	background-color: var(--background-color);
+	background-color: var(--plugintitle-color);
 	border-radius2: 0.125cm 0.125cm 0.0cm 0.0cm;
 	flex-basis: auto;
 	flex-shrink: 0;
