--- a/riffshareiii/parts/exe/theme/colorwhite.css
+++ b/riffshareiii/parts/exe/theme/colorwhite.css
@@ -1,5 +1,5 @@
 :root {
-	--background-color: #fff;
+	--background-color: #fff9f6;
 	--main-color: #900;
 	--drag-color: #9cf;
 	--line-color: #433;
