--- a/riffshareiii/parts/exe/theme/midiru.css
+++ b/riffshareiii/parts/exe/theme/midiru.css
@@ -25,7 +25,9 @@ body {
 a {
 	text-decoration: none;
 }
-
+b{
+	color: var(--page-text-color);
+}
 h1 {
 	font-size: 0.5cm;
 	padding: 0cm;
@@ -95,13 +97,13 @@ h1 {
 .pagenum {
 	display: flex;
 	justify-content: center;
-	align-items: flex-start;
+	align-items: flex-center;
 }
 
 
 
 .gopage {
-	font-size: 0.75cm;
+	font-size: 1cm;
 	color: var(--header-link-color);
 	align-items: center;
 }
@@ -114,7 +116,7 @@ h1 {
 
 .curpage {
 	display: flex;
-	align-items: center;
+	align-items: flex-end;
 	font-size: 0.5cm;
 }
 
