--- a/riffshareiii/parts/exe/theme/midiru.css
+++ b/riffshareiii/parts/exe/theme/midiru.css
@@ -15,7 +15,7 @@
 
 body {
 	font-family: "Verdana", sans-serif;
-	font-size: 0.3cm;
+	font-size: 0.35cm;
 	background-color: var(--header-bg-color);
 	color: var(--header-text-color);
 	padding: 0cm;
@@ -41,6 +41,10 @@ h2 {
 	padding: 0cm;
 	margin: 0cm;
 	font-weight: normal;
+}
+pre{
+	max-width:100%;
+	white-space: wrap;
 }
 
 .buttonplay {
@@ -111,11 +115,13 @@ h2 {
 	padding-bottom: 0;
 	padding-right: 0.25cm;
 	text-align: center;
+	max-width:100%;
 }
 
 .itemscolumn {
 	text-align: left;
 	display: inline-block;
+	max-width:100%;
 }
 
 .singleitem {
@@ -125,12 +131,12 @@ h2 {
 }
 
 .itemsmallinfo {
-	font-size: 0.3cm;
-	
+	font-size: 0.35cm;
+	max-width:100%;
 }
 
 .itemsmallline {
-	font-size: 0.3cm;
+	font-size: 0.35cm;
 	border-bottom: 1px solid var(--line-color);
 	padding-bottom: 0.2cm;
 }
