--- a/riffshareiii/parts/exe/plugins/plugins.css
+++ b/riffshareiii/parts/exe/plugins/plugins.css
@@ -207,3 +207,8 @@ a:hover {
 a:active {
 	text-decoration: none;
 }
+#prvw{
+	border-style: solid;
+  border-width: 1px;
+  border-color: var(--line-color90);;
+}
