--- a/riffshareiii/parts/exe/theme/plugin.css
+++ b/riffshareiii/parts/exe/theme/plugin.css
@@ -117,7 +117,7 @@
 #pluginPointHeader {
 	width: 100%;
 	height: 1.0cm;
-	background-color: var(--background-color);
+	background-color: var(--plugintitle-color);
 	border-radius2: 0.125cm 0.125cm 0.0cm 0.0cm;
 	flex-basis: auto;
 	flex-shrink: 0;
@@ -130,7 +130,7 @@
 .pluginOtherHeader {
 	width: 100%;
 	height: 1.0cm;
-	background-color: var(--background-color);
+	background-color: var(--plugintitle-color);
 	border-radius2: 0.125cm 0.125cm 0.0cm 0.0cm;
 	flex-basis: auto;
 	flex-shrink: 0;
@@ -139,6 +139,8 @@
 	flex-direction: row;
 	justify-content: space-between;
 	padding-top: 0.1cm;
+	
+	
 }
 /*
 #pluginEditTitleButton {
@@ -259,7 +261,7 @@
 .pluginBottom {
 	width: 100%;
 	height: 1.0cm;
-	background-color: var(--background-color10);
+	background-color: var(--plugintitle-color);
 	border-radius2: 0.125cm 0.125cm 0.0cm 0.0cm;
 	flex-basis: auto;
 	flex-shrink: 0;
@@ -268,6 +270,8 @@
 	flex-direction: row;
 	justify-content: center;
 	padding-top: 0.1cm;
+	
+	
 }
 /*
 #pluginDeleteLabel {
