--- a/riffshareiii/parts/exe/plugins/subwindow.css
+++ b/riffshareiii/parts/exe/plugins/subwindow.css
@@ -24,6 +24,7 @@ body {
 	background-color: var(--bgfill3);
 	color: var(--main-color);
 }
+
 body222 {
 	font-family: "Noto Sans SC", sans-serif;
 	font-weight: 400;
@@ -31,6 +32,7 @@ body222 {
 	background-color: var(--bgfill3);
 	color: var(--main-color);
 }
+
 h1 {
 	text-align: center;
 	font-size: 1cm;
@@ -66,18 +68,35 @@ input[type="range"]::-webkit-slider-thumb {
 	text-align: center;
 }
 
+.centercolumn {
+	display: flex;
+	flex-direction: column;
+	
+}
+
+.cntrlrow {
+
+	display: flex;
+	justify-content: center;
+	margin-top:0.1cm;
+	margin-bottom:0.2cm;
+}
+
+
 ul {
 	display: inline-block;
 	text-align: left;
 	font-size: 0.75cm;
 }
+
 li {
 	color: var(--main-color);
-	
+
 }
 
 ul li::marker {
-  color: var(--click-color);;
+	color: var(--click-color);
+	;
 }
 
 .form_radio_group {
@@ -147,7 +166,27 @@ input[type=text] {
 
 input[type=text]:focus {
 	background: var(--line-color95);
-	
+}
+
+.shorttextinput {
+	width: 2cm;
+
+}
+
+input[type=number] {
+	background: var(--background-color);
+	border: none;
+	border-bottom: 1px solid var(--click-color);
+	outline: none;
+	height: 1cm;
+	font-family: "WDXL Lubrifont SC", sans-serif;
+	font-weight44: 400;
+	color: var(--main-color);
+	width: 2cm;
+}
+
+input[type=number]:focus {
+	background: var(--line-color95);
 }
 
 button {
@@ -208,8 +247,10 @@ a:hover {
 a:active {
 	text-decoration: none;
 }
-#prvw{
+
+#prvw {
 	border-style: solid;
-  border-width: 1px;
-  border-color: var(--line-color80);;
+	border-width: 1px;
+	border-color: var(--line-color80);
+	;
 }
