--- a/riffshareiii/parts/exe/theme/menu.css
+++ b/riffshareiii/parts/exe/theme/menu.css
@@ -8,6 +8,11 @@
     stroke-width: 0.01cm;
 }
 
+.pasteDragItem {
+    fill: var(--drag-color50);
+
+}
+
 .dragDropMixerItem {
     visibility: visible;
 }
