--- a/riffshareiii/parts/exe/theme/colordarkgreen.css
+++ b/riffshareiii/parts/exe/theme/colordarkgreen.css
@@ -1,6 +1,6 @@
 :root {
 	--background-color: #030900;
-	--main-color: #fff;
+	--main-color: #dff;
 	--drag-color: #066;
 	--line-color: #cfe;
 	--click-color: #360;
